Modify password in database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: 5
   username: root
   password:
-  socket: /var/lib/mysql/mysql.sock
+  socket: /tmp/mysql.sock
 
 development:
   <<: *default
@@ -51,4 +51,5 @@ production:
   <<: *default
   database: freemarket_43nagoya_production
   username: freemarket_43nagoya
-  password: <%= ENV['FREEMARKET_43NAGOYA_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
