--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 production:
   <<: *default
   database: freemarket_43nagoya_production
-  username: freemarket_43nagoya
+  username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
